--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>Pluralsight Admin</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>React and Redux in ES6 on Pluralsight</h1>
-    <div id="app">
-        
-    </div>
+    <div id="app"></div>
     <script src="/bundle.js"></script>
-</body>
+  </body>
 </html>
